i tried to style oh

--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="nav_header">
+        <nav class="navigation">
+            <div class="nav_logo">
+                <img src="images/main-logo.png" alt="">
+
+            </div>
+            <div class="nav_menu1">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">blog</a></li>
+
+                </ul>
+                <button class="nav_btn">Get PRO</button>
+
+            </div>
+            <div class="nav_menu2">
+                <ul>
+                    <li><a href="#">WISHLIST (0)</a></li>
+                    <li><a href="#">CART (0)</a></li>
+                </ul>
+                <img src="images/search.png" alt="">
+            </div>
+        </nav>
+
+    </header>
+    <section class="Jumbotron">
+        <div class="Jumbotron_left">
+            <img src="images/two-col-banner-2.png" alt="">
+
+        </div>
+        <div class="Jumbotron_right">
+       <h2>TIMELESS ELEGANCE CRAFTED FOR PERFECTION</h2>
+       <p>Discover the worlds timeless pieces, where fashion meets artistry</p>
+       <button class="Jumbotron_left_btn">EXPLORE THE COLLECTION</button>
+        </div>
+        
+    </section>
 </body>
+
 </html>
